tests/lean/typeMismatch.lean.expected.out
typeMismatch.lean:7:0: error: type mismatch
  IO.println ""
has type
  IO Unit
but is expected to have type
  IO Nat
typeMismatch.lean:12:0: error: type mismatch
  Meta.isDefEq x x
has type
  MetaM Bool
but is expected to have type
  MetaM Unit
